2008-08-23 Jens Tkotz <jens@peino.de> 1.5.9-svn-b4

 * Change: Remove wrong check for nobody in Album::isItemOwner

 * Change: Changed order of some methodes in Album.php
           Added lots of phpDoc

 * Fix: Add loggedIn user for check Album::isOwner
 
 * Fix: getVotingIdByIndex for subalbums
 
2008-08-23 Jens Tkotz <jens@peino.de> 1.5.9-svn-b3
 
 * Change: Remove special stats.footer use general.footer

 * Fix: Make form action in stats-wizard again stats.php

2008-08-18 Jens Tkotz <jens@peino.de> 1.5.9-svn-b2

 * Fix: Stats-Wizard did not work (EVER!) in IE6.

 Thanks to Andrew Vasilyev

2008-08-18 Jens Tkotz <jens@peino.de> 1.5.9-svn-b1

 * Fix: Unified appearance of all admin pages.

 * Fix: Statistics and its wizard not working correct when embedded.

 * Fix: Removing invalid albums did not work.

2008-08-15 Jens Tkotz <jens@peino.de> 1.5.8-pl1-svn-b13

 * ImageMap fixes

   - No new ImageMaps at all :-(
   - Choosing brush color broken.
   - Several ways to hangup JS.
   - PHP notice due to missing var.

 * Fix: Zip Icon in thumbs view missing.

 * New (because of fixes abov)
   Param $updatePreview and $label for colorpicker.

 * Fix: PHP notice when viewing a hidden photo.

2008-08-15 Jens Tkotz <jens@peino.de> 1.5.8-pl1-svn-b12

 * Fix: Copying a photo from a subalbum into the same album did not work.

 * Fix: Wrong error message when try to move an item into its current place.

2008-08-15 Jens Tkotz <jens@peino.de> 1.5.8-pl1-svn-b11

 * Fix: Deleting comments within "comments view" did not work.

 * Fix: Added check for invalid call for Album::getComment($commentIndex)

 * Fix: Colorpicker did not work when Gallery was embedded.

 * Fix: Do not show duplicate icons in photoview.

 * Change: Gallery ran in Zikula, but now it KNOWS that it runs in Zikula.

2008-08-13 Jens Tkotz <jens@peino.de> 1.5.8-pl1-svn-b10

 * Fix: Code, HTML, wording cleanup.

2008-08-13 Jens Tkotz <jens@peino.de> 1.5.8-pl1-svn-b9
