@@ -53,7 +53,7 @@ $perms = array(
     'canDeleteFrom'     => gTranslate('core', "Users who can delete items."),
     'canWrite'          => gTranslate('core', "Users who can modify items."),
     'canCreateSubAlbum' => gTranslate('core', "Users who can create subalbums."),
-    'zipDownload'       => gTranslate('core', "Users who can download the album (with subalbums) as archive."),
+    'zipDownload'       => gTranslate('core', "Users who can download this album (with subalbums) as archive."),
     'canViewComments'   => gTranslate('core', "Users who can view comments."),
     'canAddComments'    => gTranslate('core', "Users who can add comments."),
     'canViewFullImages' => gTranslate('core', "Users who can view full (original) images."),
