@@ -445,6 +445,7 @@ a.error:hover {
     border: 1px solid #000;
     -moz-border-radius-topleft: 10px;
     -moz-border-radius-topright: 10px;
+    float: left;
 }
 
 .g-tabset a:hover {
@@ -457,6 +458,10 @@ a.error:hover {
 	color: #fff;
 	background-color: #009;
 	border-bottom: 1px solid #000;
+}
+
+.g-tabset a.tab-hi {
+    border-bottom: 1px solid #000;
 }
 
 .g-tabset a {
@@ -599,7 +604,6 @@ caption {
     margin: 2px;
 }
 
-
 .g-va-poll-box3 {
     font-size: 9pt;
     margin: 2px;
@@ -638,38 +642,6 @@ caption {
     margin: 2px;
 }
 
-.g-tabset {
-    width: 100%;
-    font-weight: bold;
-    border-bottom: 1px solid black;
-    margin: 2px 0;
-}
-
-.g-tabset a {
-    margin: -2px 0 -1px 2px;
-    white-space: nowrap;
-    text-decoration: none;
-    color: #000;
-    background-color: #FCFCF3;
-    padding: 2px 0.5em;
-    display: block;
-    border: 1px solid #000;
-    -moz-border-radius-topleft: 10px;
-    -moz-border-radius-topright: 10px;
-}
-
-.g-tabset a:hover {
-    text-decoration: none;
-}
-
-.g-tabset a.tab-hi {
-    border-bottom: 1px solid #000;
-}
-
-.left {
-	text-align: left;
-}
-
 .g-emphasis {
     font-weight: bold;
 }
@@ -699,12 +671,6 @@ caption {
 .g-selected {
     font-weight: bold;
     font-size: 10pt;
-}
-
-/* Indicates an important setting. */
-.g-attention {
-    color: red;
-    font-weight: bold;
 }
 
 .g-tooltip, .g-balloon-tooltip {
@@ -831,10 +797,6 @@ table.g-nav-pages td {
 
 .right5 {
     margin-right: 5px;
-}
-
-.g-tabset a {
-    float: left;
 }
 
 .g-borderright {
