@@ -1,3 +1,13 @@
+2008-08-23 Jens Tkotz <jens@peino.de> 1.5.9-svn-b5
+
+ * Removed: layout/adminAlbumCommands.inc
+
+ * Change: Use getAlbumCommands() in albums.php
+
+ * New: lib/progressbar.php
+
+ * Change: Little wording.
+
 2008-08-23 Jens Tkotz <jens@peino.de> 1.5.9-svn-b4
 
  * Change: Remove wrong check for nobody in Album::isItemOwner
